--- a/styles/style.css
+++ b/styles/style.css
@@ -2,8 +2,45 @@
     border: 1px solid black;
     width: 100%;
     height: 500px;
+    border-radius: 5px;
+    margin-bottom: 25px;
 }
 
 .color{
-    border: 1px solid black;
+    border-radius: 5px;
+    background-color: #A0A8EC;
+}
+
+.color:hover{
+    background-color: #6F77C0;
+}
+
+section{
+    text-align: center;
+}
+
+label{
+    margin-left: 30px;
+    margin-right: 5px;
+    font-size: 16px;
+    font-family: 'Roboto', sans-serif;
+}
+
+button{
+    margin-top: 25px;
+    width: 250px;
+    height: 35px;
+    border-radius: 5px;
+    border: 0;
+    background-color: #73C64D;
+    color: #FFFF;
+    font-family: 'Roboto', sans-serif;
+    font-size: 16px;
+    transition: all;
+    transition-duration: 0.5s;
+}
+
+button:hover{
+    background-color: #70A657;
+
 }
