--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,12 @@
+@keyframes opacity {
+    0%   {opacity: 0;}
+    25%  {opacity: 0.2;}
+    50%  {opacity: 0.5;}
+    75%  {opacity: 0.7;}
+    100% {opacity: 1;}
+  }
+
+
 .container{
     border: 1px solid black;
     width: 100%;
@@ -7,6 +16,7 @@
 }
 
 .color{
+    animation: opacity 0.7s;
     border-radius: 5px;
     background-color: #A0A8EC;
 }
