--- a/styles/style.css
+++ b/styles/style.css
@@ -36,6 +36,10 @@ label{
     font-family: 'Roboto', sans-serif;
 }
 
+input{
+    height: 20px;
+}
+
 button{
     margin-top: 25px;
     width: 250px;
